--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+countries=Brazil,India,USA,UK,France,Mexico,Spain,Germany
+languages=Python,Java,Go, Rust
+systems=Linux,MacOs,Microsoft Windows,Android OS,IOS
